RESOLVED FIXED247246
REGRESSION (256117@main): Unable to toggle network connection integrity using `-_setNetworkConnectionIntegrityEnabled:`
https://bugs.webkit.org/show_bug.cgi?id=247246
Summary REGRESSION (256117@main): Unable to toggle network connection integrity using...
Wenson Hsieh
Reported 2022-10-30 15:46:20 PDT
.
Attachments
Wenson Hsieh
Comment 1 2022-10-30 16:12:45 PDT
EWS
Comment 2 2022-10-31 18:33:17 PDT
Committed 256179@main (778b4272eb82): <https://commits.webkit.org/256179@main> Reviewed commits have been landed. Closing PR #5946 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-31 18:34:23 PDT
Note You need to log in before you can comment on or make changes to this bug.