REGRESSION (256117@main): Unable to toggle network connection integrity using `-_setNetworkConnectionIntegrityEnabled:` https://bugs.webkit.org/show_bug.cgi?id=247246

Reviewed by Tim Horton.

* Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferences.mm:
(-[WKWebpagePreferences _setNetworkConnectionIntegrityEnabled:]):

Add or remove the `Enabled` flag, instead of unconditionally adding the flag.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsitePolicies.mm:

Add a simple API test to exercise the change.

Canonical link: https://commits.webkit.org/256179@main